# columns-vs-relations

./: README.md  pyproject.toml
deploy/: Dockerfile  Dockerfile.hbase  docker-compose.hbase.yml  docker-compose.postgres.yml
hbase/: Dockerfile  STATS.md  data_structures.py  docker-compose.yml  main.py  map_reduce_runner.py  requirements.txt  time_it.py
hbase/core/: server.py  stopwatch.py
hbase/core/mr/: jobs.py  runner.py
hbase/distributed/: docker-compose.yml
hbase/mr/: mr_jobs.py
hbase/standalone/: docker-compose.yml  hbase.env
hbase/temp/: count-by-two-goods.input.txt
hbase/utils/: time_it.py
libs/shared/: db.py  server.py
postgres/: STATS.md  docker-compose.yml  main.py
postgres/envs/: db.env
projects/hbase/: main.py
projects/hbase/core/: db.py
projects/hbase/core/mr/: jobs.py
projects/postgres/: main.py
projects/postgres/core/: db.py
projects/postgres/envs/: db.env
